--- a/BTL_KTPM.BackendAPI/BTL_KTPM.BackendAPI.csproj
+++ b/BTL_KTPM.BackendAPI/BTL_KTPM.BackendAPI.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BTL_KTPM.Data\BTL_KTPM.Data.csproj" />
   </ItemGroup>
 
 </Project>
