create product api

--- a/BTL_KTPM.Application/BTL_KTPM.Application.csproj
+++ b/BTL_KTPM.Application/BTL_KTPM.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App"></FrameworkReference>
+	</ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\BTL_KTPM.Data\BTL_KTPM.Data.csproj" />
   </ItemGroup>
 
