--- a/BTL_KTPM.BackendAPI/BTL_KTPM.BackendAPI.csproj
+++ b/BTL_KTPM.BackendAPI/BTL_KTPM.BackendAPI.csproj
@@ -12,7 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BTL_KTPM.Application\BTL_KTPM.Application.csproj" />
     <ProjectReference Include="..\BTL_KTPM.Data\BTL_KTPM.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\user-content\" />
   </ItemGroup>
 
 </Project>
