add cart and user entities

--- a/BTL_KTPM.BackendAPI/BTL_KTPM.BackendAPI.csproj
+++ b/BTL_KTPM.BackendAPI/BTL_KTPM.BackendAPI.csproj
@@ -1,12 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <PackageProjectUrl>http://192.168.1.14:7022/</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Owin.StaticFiles" Version="4.2.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
   </ItemGroup>
@@ -14,10 +17,6 @@
   <ItemGroup>
     <ProjectReference Include="..\BTL_KTPM.Application\BTL_KTPM.Application.csproj" />
     <ProjectReference Include="..\BTL_KTPM.Data\BTL_KTPM.Data.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\user-content\" />
   </ItemGroup>
 
 </Project>
