--- a/BTL_KTPM.BackendAPI/Properties/launchSettings.json
+++ b/BTL_KTPM.BackendAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7022;http://localhost:5022",
+      "applicationUrl": "http://192.168.1.14:7022;http://192.168.1.14:5022",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
