--- a/BTL_KTPM.BackendAPI/appsettings.json
+++ b/BTL_KTPM.BackendAPI/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": 123456789987654321,
+    "Issuer": "https://hello.api.com"
+  }
 }
