--- a/BTL_KTPM.Admin_App/Properties/launchSettings.json
+++ b/BTL_KTPM.Admin_App/Properties/launchSettings.json
@@ -1,20 +1,18 @@
 ﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5931",
-      "sslPort": 44307
+      "applicationUrl": "http://localhost:23305",
+      "sslPort": 44334
     }
   },
   "profiles": {
-    "BTL_KTPM.BackendAPI": {
+    "BTL_KTPM.Admin_App": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://192.168.2.102:7022;http://192.168.2.102:5022",
+      "applicationUrl": "https://localhost:7103;http://localhost:5103",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +20,6 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
