--- a/BTL_KTPM.Application/BTL_KTPM.Application.csproj
+++ b/BTL_KTPM.Application/BTL_KTPM.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
   </ItemGroup>
 	<ItemGroup>
