--- a/BTL_KTPM.WebMvc/appsettings.Development.json
+++ b/BTL_KTPM.WebMvc/appsettings.Development.json
@@ -1,8 +1,3 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  }
+  "BaseAddress": "http://192.168.2.102:7022"
 }
