--- a/BTL_KTPM.BackendAPI/appsettings.Development.json
+++ b/BTL_KTPM.BackendAPI/appsettings.Development.json
@@ -7,5 +7,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+
+  },
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": 123456789987654321,
+    "Issuer": "https://hello.api.com"
   }
 }
