--- a/BTL_KTPM.WebMvc/BTL_KTPM.WebMvc.csproj
+++ b/BTL_KTPM.WebMvc/BTL_KTPM.WebMvc.csproj
@@ -10,4 +10,14 @@
     <Folder Include="wwwroot\img\portrai-user\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.6" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BTL_KTPM.ApiIntegration\BTL_KTPM.ApiIntegration.csproj" />
+    <ProjectReference Include="..\BTL_KTPM.Application\BTL_KTPM.Application.csproj" />
+  </ItemGroup>
+
 </Project>
