--- a/BTL_KTPM.Admin_App/Properties/launchSettings.json
+++ b/BTL_KTPM.Admin_App/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://192.168.43.186:7103;http://192.168.43.186:5103",
+      "applicationUrl": "http://localhost:7103;http://localhost:5103",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
