--- a/BTL_KTPM.WebMvc/Properties/launchSettings.json
+++ b/BTL_KTPM.WebMvc/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://192.168.43.186:7209;http://192.168.43.186:5209",
+      "applicationUrl": "https://localhost:7029;http://locallhost:5209",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
