edit project  for testing

--- a/BTL_KTPM.Admin_App/appsettings.Development.json
+++ b/BTL_KTPM.Admin_App/appsettings.Development.json
@@ -5,5 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "BaseAddress": "http://localhost:7022"
+  "BaseAddress": "https://localhost:7022"
 }
