--- a/BTL_KTPM.BackendAPI/Properties/launchSettings.json
+++ b/BTL_KTPM.BackendAPI/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:7022;http://localhost:5022;",
+      "applicationUrl": "http://localhost:7022",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
